package com.bignerdranch.android.timberworkoutlogs.models

enum class WeightUnit {
    KG,
    LB
}